# cyntenator

./: CFX.txt  CMakeLists.txt  HSX.txt  INSTALL  MMX.txt  Makefile  README.md  README.rst  cyntenator.cpp  flow.cpp  flow.h  genome.cpp  genome.h  human_mouse  localign.cpp  localign.h  mymatrix.h  species_tree.cpp  species_tree.h  string_hash.h  test2.txt
